[package]
name = "wasmer-experimental-io-devices-lib"
version = "0.1.1"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
publish = true
description = "Convenient bindings to use the experimental wasmer io devices"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
